// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 1 with dates 1`] = `
"<th class="row__cell row__cell--header row__cell--secondary">
  <div class="cell__title"><a href="https://uscode.house.gov/" target="_blank" rel="noopener noreferrer" class="external" data-testid="house-gov-link-link">House.gov</a></div>
  <div class="cell__subtitle" data-testid="house-gov-link-subtitle-0">effective Aug 2023</div>
</th>"
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 1 without dates 1`] = `
"<th class="row__cell row__cell--header row__cell--secondary">
  <div class="cell__title"><a href="https://uscode.house.gov/" target="_blank" rel="noopener noreferrer" class="external" data-testid="house-gov-link-link">House.gov</a></div>
  <div class="cell__subtitle" data-testid="house-gov-link-subtitle-0"></div>
</th>"
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 2 with dates 1`] = `
"<th class="row__cell row__cell--header row__cell--secondary">
  <div class="cell__title"><a href="https://www.govinfo.gov/app/collection/comps/" target="_blank" rel="noopener noreferrer" class="external" data-testid="statute-compilation-link-link">Statute Compilation</a></div>
  <div class="cell__subtitle" data-testid="statute-compilation-link-subtitle-0">effective Aug 2023</div>
</th>"
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 2 without dates 1`] = `
"<th class="row__cell row__cell--header row__cell--secondary">
  <div class="cell__title"><a href="https://www.govinfo.gov/app/collection/comps/" target="_blank" rel="noopener noreferrer" class="external" data-testid="statute-compilation-link-link">Statute Compilation</a></div>
  <div class="cell__subtitle" data-testid="statute-compilation-link-subtitle-0"></div>
</th>"
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 3 with dates 1`] = `
"<th class="row__cell row__cell--header row__cell--secondary">
  <div class="cell__title"><a href="https://www.govinfo.gov/app/collection/uscode" target="_blank" rel="noopener noreferrer" class="external" data-testid="us-code-annual-link-link">US Code Annual</a></div>
  <div class="cell__subtitle" data-testid="us-code-annual-link-subtitle-0">effective Aug 2023</div>
</th>"
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 3 without dates 1`] = `
"<th class="row__cell row__cell--header row__cell--secondary">
  <div class="cell__title"><a href="https://www.govinfo.gov/app/collection/uscode" target="_blank" rel="noopener noreferrer" class="external" data-testid="us-code-annual-link-link">US Code Annual</a></div>
  <div class="cell__subtitle" data-testid="us-code-annual-link-subtitle-0"></div>
</th>"
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 4 with dates 1`] = `
"<th class="row__cell row__cell--header row__cell--secondary">
  <div class="cell__title"><a href="https://www.ssa.gov/OP_Home/ssact/ssact.htm" target="_blank" rel="noopener noreferrer" class="external" data-testid="ssa-gov-link-link">SSA.gov</a></div>
  <div class="cell__subtitle" data-testid="ssa-gov-link-subtitle-0">effective Aug 2023</div>
</th>"
`;

exports[`Statute Table Header Cell > SSA table header > Creates a snapshot of header cell for column 4 without dates 1`] = `
"<th class="row__cell row__cell--header row__cell--secondary">
  <div class="cell__title"><a href="https://www.ssa.gov/OP_Home/ssact/ssact.htm" target="_blank" rel="noopener noreferrer" class="external" data-testid="ssa-gov-link-link">SSA.gov</a></div>
  <div class="cell__subtitle" data-testid="ssa-gov-link-subtitle-0"></div>
</th>"
`;
